# nextjs-rust-monorepo

./: .gitignore  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  render.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/core/: message_manager.rs  mod.rs
backend/src/routes/: get_messages.rs  hello.rs  mod.rs  post_message.rs
backend/src/services/: database.rs
frontend/: Dockerfile  cypress.config.ts  package-lock.json  package.json
frontend/app/: home.tsx  page.tsx
frontend/app/components/: button.tsx  inputField.tsx  status.tsx
frontend/cypress/e2e/: spec.cy.ts
